# ortho-config

./: .Makefile.swp  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  clippy.toml  dylint.toml  lading.toml  rust-toolchain.toml  typos.local.toml  typos.toml
cargo-orthohelp/: Cargo.toml  README.md
cargo-orthohelp/src/: bridge.rs  cache.rs  cli.rs  error.rs  fs_helpers.rs  ir.rs  lib.rs  locale.rs  main.rs  metadata.rs  output.rs  rustflags.rs  schema.rs  tests.rs
cargo-orthohelp/src/agent_context/: mod.rs  proptests.rs  tests.rs  tests_nested_support.rs  tests_support.rs
cargo-orthohelp/src/cli/: mod.rs  reserved_agent_context_tests.rs
cargo-orthohelp/src/policy/: mod.rs  tests.rs
cargo-orthohelp/src/powershell/: about.rs  maml.rs  manifest.rs  mod.rs  test_fixtures.rs  text.rs  types.rs  wrapper.rs  writer.rs
cargo-orthohelp/src/roff/: entry.rs  escape.rs  mod.rs  sections.rs  types.rs  writer.rs
cargo-orthohelp/src/schema/: mod.rs  tests.rs
cargo-orthohelp/src/test_support/: mod.rs  nested_fixture.rs
cargo-orthohelp/tests/: cli_dispatch.rs  compile_time.rs  golden_tests.rs  nested_subcommand_end_to_end.rs  powershell_windows.rs  rstest_bdd.rs
cargo-orthohelp/tests/common/: mod.rs  powershell_fixture.rs
cargo-orthohelp/tests/features/: orthohelp_agent_context.feature  orthohelp_ir.feature  orthohelp_powershell.feature  orthohelp_roff.feature
cargo-orthohelp/tests/fixtures/: mod.rs  nested_fixture.rs  nested_fixture_impl.rs
cargo-orthohelp/tests/golden/: agent_context__fixture.json.snap  agent_context__nested_fixture.json.snap  agent_context__simple_fixture.json.snap  agent_context_tests.rs  mod.rs  nested_subcommand_snapshots.rs  powershell_tests.rs  roff_tests.rs
cargo-orthohelp/tests/rstest_bdd/: mod.rs
cargo-orthohelp/tests/snapshots/: cli_dispatch__cargo_dispatch_help.snap  cli_dispatch__direct_top_level_help.snap
cargo-orthohelp/tests/ui/: must_use_bridge_ir.rs  must_use_bridge_ir.stderr
examples/hello_world/: Cargo.toml  README.md
examples/hello_world/config/: baseline.toml  overrides.toml
examples/hello_world/scripts/: demo.cmd  demo.sh
examples/hello_world/src/: cli.rs  error.rs  lib.rs  localizer.rs  main.rs  message.rs  test_support.rs
examples/hello_world/tests/: agent_context_bdd.rs  agent_context_e2e.rs  agent_context_snapshot.rs  cucumber.rs  localised_help.rs  localised_help_bdd.rs
ortho_config/: Cargo.toml  README.md
ortho_config/examples/: registry_ctl.rs
ortho_config/locales/en-US/: messages.ftl
ortho_config/locales/ja/: messages.ftl
ortho_config/src/: csv_env.rs  declarative.rs  discovery.rs  error.rs  file.rs  lib.rs  localizer.rs  merge.rs  placeholder.rs  post_merge.rs  result_ext.rs  subcommand.rs
ortho_config/src/agent_context/: json.rs  mod.rs  tests.rs  tests_contract_support.rs  tests_json.rs  tests_round_trip.rs
ortho_config/src/declarative/: composer.rs  convert.rs  layer.rs  merge.rs  mod.rs
ortho_config/src/discovery/: builder.rs  candidates.rs  dedup_tests.rs  load.rs  mod.rs  outcome.rs  tests.rs
ortho_config/src/docs/: ir.rs  mod.rs
ortho_config/src/error/: aggregate.rs  constructors.rs  conversions.rs  helpers.rs  mod.rs  tests.rs  types.rs
ortho_config/src/file/: error.rs  extends.rs  file_tests.rs  helpers.rs  loader.rs  mod.rs  parser.rs  path.rs  yaml.rs
ortho_config/src/localizer/: clap_error.rs  fluent.rs  identifier.rs  mod.rs  tests.rs
ortho_config/src/subcommand/: mod.rs  paths.rs  selected.rs  types.rs
ortho_config/tests/: attribute_handling.rs  clap_integration.rs  clap_subcommand.rs  clap_test_utils.rs  cli_default_as_absent.rs  cli_default_as_absent_collections.rs  compile_fail.rs  compose_layers.rs  crate_path_trybuild.rs  csv_env.rs  cucumber.rs  declarative_merge.rs  declarative_merge_trybuild.rs  discovery_attributes.rs  discovery_buffering.rs  docs_ir.rs  docs_ir_subcommands.rs  dynamic_tables.rs  empty_struct.rs  error_aggregation.rs  extends.rs  flatten_merge.rs  ignore_patterns.rs  localized_parse.rs  localized_parse_trybuild.rs  merge_error_routing.rs  merge_error_variants.rs  merge_strategy.rs  merge_utils.rs  nested_docs_ir.rs  post_merge_hook.rs  reexports.rs  selected_subcommand_merge.rs  subcommand.rs  subcommand_docs.rs  subcommand_merge.rs  test_utils.rs  util.rs
ortho_config/tests/clap_integration/: common.rs  config_path.rs  error_cases.rs  mod.rs  option_cases.rs  parsing.rs  xdg.rs
ortho_config/tests/common/: merge_fixtures.rs  mod.rs
ortho_config/tests/features/: cli_default_as_absent.feature  cli_precedence.feature  collection_merge.feature  config_path.feature  csv_env.feature  docs_ir.feature  docs_ir_nested.feature  error_aggregation.feature  extends.feature  flatten.feature  ignore_patterns.feature  localizer.feature  merge_composer.feature  merge_error_routing.feature  merge_errors.feature  rstest_bdd_canary.feature  subcommand.feature
ortho_config/tests/rstest_bdd/: canary.rs  canary_steps.rs  fixtures.rs  mod.rs  nested_docs_fixture.rs  scenario_state.rs  steps.rs
ortho_config/tests/steps/: cli_steps.rs  collection_steps.rs  config_path_steps.rs  env_steps.rs  error_steps.rs  extends_steps.rs  flatten_steps.rs  ignore_steps.rs  mod.rs  subcommand_steps.rs
ortho_config/tests/subcommand/: basic.rs  cli.rs  merge.rs  mod.rs  nesting.rs  prefix.rs
ortho_config/tests/support/: default_punct.rs  localizers.rs
ortho_config/tests/test_helpers/: cwd.rs  mod.rs
ortho_config/tests/trybuild/: crate_path_alias.rs  crate_path_alias_renamed.rs  declarative_merge_fail.rs  declarative_merge_fail.stderr  declarative_merge_success.rs  localized_parse_parser.rs  localized_parse_requires_parser.rs  localized_parse_requires_parser.stderr
ortho_config/tests/ui/: invalid_cli_short.rs  invalid_cli_short.stderr  invalid_merge_strategy.rs  reserved_cli_long.rs  (+14 more)
ortho_config_macros/: Cargo.toml  README.md
ortho_config_macros/src/: lib.rs  selected_subcommand_merge.rs  subcommand_docs.rs  tests.rs
test_helpers/: Cargo.toml  README.md
test_helpers/src/: cwd.rs  figment.rs  lib.rs  text.rs
(+269 files in other folders)
