[workspace]
members = [
    "ortho_config",
    "ortho_config_macros"
]
resolver = "2"

[workspace.package]
version = "0.3.0"
authors = ["Payton McIntosh <pmcintosh@df12.net>"]
edition = "2024"
license = "ISC"
repository = "https://github.com/leynos/ortho-config"
description = "A configuration management library for Rust, inspired by esbuild."
readme = "README.md"
keywords = ["config", "configuration", "cli", "env", "settings"]
categories = ["config", "command-line-interface"]

[workspace.dev-dependencies]
cucumber = "0.21.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# `cargo clippy` lints configuration
[workspace.lints.clippy]
# make every pedantic lint emit a warning
pedantic = "warn"
