[workspace]
members = [
    "examples/hello_world",
    "ortho_config",
    "ortho_config_macros",
    "test_helpers"
]
resolver = "2"

[workspace.package]
version = "0.5.0-beta2"
authors = ["Payton McIntosh <pmcintosh@df12.net>"]
edition = "2024"
license = "ISC"
repository = "https://github.com/leynos/ortho-config"
description = "A configuration management library for Rust, inspired by esbuild."
readme = "README.md"
keywords = ["config", "configuration", "cli", "env", "settings"]
categories = ["config", "command-line-interface"]


# `cargo clippy` lints configuration
[workspace.lints.clippy]
# make every pedantic lint emit a warning
pedantic = "warn"
