[package]
name = "ortho_config"
version = "0.5.0-beta1"
edition = "2024"
readme = "README.md"
description.workspace = true
license.workspace = true
repository.workspace = true



[lints]
workspace = true

[dependencies]
ortho_config_macros = { path = "../ortho_config_macros", version = "0.5.0-beta1" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
clap-dispatch = "0.1"
figment = { version = "0.10", default-features = false, features = ["env", "test"] }
uncased = "0.9"
toml = { version = "0.9", optional = true }
figment-json5 = { version = "0.1", optional = true }
serde_yaml = { version = "0.9", optional = true }
json5 = { version = "0.4", optional = true }
serde_json = { version = "1" }

[target.'cfg(not(any(unix, target_os = "redox")))'.dependencies]
directories = "6"

[target.'cfg(any(unix, target_os = "redox"))'.dependencies]
xdg = "3"

[target.'cfg(windows)'.dependencies]
dunce = "1.0.0"

[features]
default = ["toml"]
toml = ["figment/toml", "dep:toml", "ortho_config_macros/toml"]
json5 = ["dep:figment-json5", "dep:json5", "ortho_config_macros/json5"]
yaml = ["figment/yaml", "dep:serde_yaml", "ortho_config_macros/yaml"]

[dev-dependencies]
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
trybuild = "1"
cucumber = "0.21.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rstest = "0.26.1"
serial_test = "3"
cap-std = "3"
camino = "1"
tempfile = "3"
test_helpers = { path = "../test_helpers" }

[[test]]
name = "cucumber"
harness = false

[[example]]
name = "registry_ctl"
path = "examples/registry_ctl.rs"
test = true
