[package]
name = "ortho_config"
version = "0.6.0"
edition = "2024"
readme = "README.md"
description.workspace = true
license.workspace = true
repository.workspace = true



[lints]
workspace = true

[dependencies]
ortho_config_macros = { path = "../ortho_config_macros", version = "0.6.0" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
clap-dispatch = "0.1"
figment = { version = "0.10", default-features = false, features = ["env", "test"] }
uncased = "0.9"
camino = "1"
dirs = "5"
toml = { version = "0.9", optional = true }
figment-json5 = { version = "0.1", optional = true }
serde_saphyr = { package = "serde-saphyr", version = "0.0.6", optional = true }
json5 = { version = "0.4", optional = true }
serde_json = { version = "1", optional = true }

[target.'cfg(not(any(unix, target_os = "redox")))'.dependencies]
directories = "6"

[target.'cfg(any(unix, target_os = "redox"))'.dependencies]
xdg = "3"

[target.'cfg(windows)'.dependencies]
dunce = "1.0.0"

[features]
default = ["serde_json", "toml"]
serde_json = ["dep:serde_json"]
toml = ["figment/toml", "dep:toml", "ortho_config_macros/toml"]
json5 = ["dep:figment-json5", "dep:json5", "ortho_config_macros/json5"]
yaml = ["dep:serde_saphyr", "serde_json", "ortho_config_macros/yaml"]

[dev-dependencies]
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
trybuild = "1"
cucumber = "0.21.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rstest = "0.26.1"
rstest-bdd = "0.1.0"
rstest-bdd-macros = "0.1.0"
serial_test = "3"
cap-std = "3"
tempfile = "3"
test_helpers = { path = "../test_helpers" }
anyhow = "1"

[[test]]
name = "cucumber"
harness = false

[[example]]
name = "registry_ctl"
path = "examples/registry_ctl.rs"
test = true
