[package]
name = "ortho_config"
version = "0.7.0"
edition = "2024"
rust-version.workspace = true
readme = "README.md"
description.workspace = true
license.workspace = true
repository.workspace = true



[lints]
workspace = true

[dependencies]
ortho_config_macros = { path = "../ortho_config_macros", version = "0.7.0" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
clap-dispatch = "0.1"
figment = { version = "0.10", default-features = false, features = ["env", "test"] }
fluent-bundle = "0.16.0"
fluent-syntax = "0.12"
uncased = "0.9"
camino = "1"
dirs = "5"
cap-std = { version = "3.4.1", features = ["fs_utf8"] }
tracing = "0.1"
unic-langid = { version = "0.9", features = ["macros"] }
toml = { version = "0.9", optional = true }
figment-json5 = { version = "0.1", optional = true }
serde_saphyr = { package = "serde-saphyr", version = "0.0.6", optional = true }
json5 = { version = "0.4", optional = true }
serde_json = { version = "1", optional = true }

[target.'cfg(not(any(unix, target_os = "redox")))'.dependencies]
directories = "6"

[target.'cfg(any(unix, target_os = "redox"))'.dependencies]
xdg = "3"

[target.'cfg(windows)'.dependencies]
dunce = "1.0.0"

[features]
default = ["serde_json", "toml"]
serde_json = ["dep:serde_json"]
toml = ["figment/toml", "dep:toml"]
json5 = ["dep:figment-json5", "dep:json5"]
yaml = ["dep:serde_saphyr", "serde_json"]

[dev-dependencies]
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
trybuild = "1"
rstest = "0.26.1"
rstest-bdd.workspace = true
rstest-bdd-macros.workspace = true
serial_test = "3"
tempfile = "3"
test_helpers = { path = "../test_helpers" }
anyhow = "1"
ortho_config_macros = { path = "../ortho_config_macros", version = "0.7.0" }

[[example]]
name = "registry_ctl"
path = "examples/registry_ctl.rs"
test = true
