[package]
name = "ortho_config_macros"
version = "0.3.0"
edition = "2024"
description = "Procedural macros for ortho_config"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[features]
default = []
json5 = []
yaml = []
toml = []

[dev-dependencies]
rstest = "0.25.0"
