[package]
name = "ortho_config_macros"
version = "0.5.0-beta2"
edition = "2024"
readme = "README.md"
description = "Procedural macros for ortho_config."
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[features]
# Mirrors optional format parsers in `ortho_config` so
# macro output enables them when selected.
default = []
json5 = []
yaml = []
toml = []

[dev-dependencies]
rstest = "0.26.1"
serde = { version = "1", features = ["derive"] }
ortho_config = { path = "../ortho_config" }
