[package]
name = "ortho_config_macros"
version = "0.8.0"
edition = "2024"
rust-version.workspace = true
readme = "README.md"
description = "Procedural macros for ortho_config."
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "visit"] }
quote = "1"
proc-macro2 = "1"
heck = "0.5.0"

[features]
# Mirrors optional format parsers in `ortho_config` so
# macro output enables them when selected.
default = []
serde_json = []
json5 = []
yaml = []
toml = []

[dev-dependencies]
anyhow = "1"
rstest = "0.26.1"
serde = { version = "1", features = ["derive"] }
ortho_config = { path = "../ortho_config", version = "0.8.0" }
