[package]
name = "ortho_config_test_helpers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Shared test helpers for crates in the ortho-config workspace."
license.workspace = true
repository.workspace = true
readme = "README.md"
publish = ["crates-io"]

[lints]
workspace = true

[dependencies]
anyhow = "1"
camino = "1"
figment = { version = "0.10", default-features = false, features = ["env", "test"] }
parking_lot = "0.12"
