[package]
name = "hello_world"
version = "0.6.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
ortho_config = { path = "../../ortho_config", version = "0.6.0" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
camino = "1"
[dev-dependencies]
anyhow = "1"
cucumber = "0.21.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "io-util"] }
rstest = "0.23"
rstest-bdd = "0.1.0"
rstest-bdd-macros = "0.1.0"
shlex = "1.3.0"
tempfile = "3"
cap-std = "3"
gherkin = "0.14"
toml = "0.8"
test_helpers = { path = "../../test_helpers", version = "0.6.0" }

[features]
default = []
json5 = ["ortho_config/json5"]
yaml = ["ortho_config/yaml"]
cfg-toml = ["ortho_config/toml"]

[[test]]
name = "cucumber"
harness = false
path = "tests/cucumber/mod.rs"
