[package]
name = "hello_world"
version = "0.8.0"
edition = "2024"
rust-version.workspace = true
publish = false

[package.metadata.ortho_config]
root_type = "hello_world::cli::HelloWorldCli"
locales = ["en-US", "ja"]

[package.metadata.ortho_config.windows]
module_name = "HelloWorld"

[lints]
workspace = true

[dependencies]
# `figment`, `uncased`, and `xdg` are available via `ortho_config` re-exports.
ortho_config = { path = "../../ortho_config", version = "0.8.0" }
ortho_config_macros = { path = "../../ortho_config_macros", version = "0.8.0" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
fluent-bundle = "0.16"
color-eyre = "0.6"
camino = "1"
tracing = "0.1"
[dev-dependencies]
anyhow = "1"
assert_cmd = "2.0"
insta = { version = "1.41", features = ["filters"] }
rstest = "0.23"
rstest-bdd.workspace = true
rstest-bdd-macros.workspace = true
shlex = "1.3.0"
tempfile = "3"
cap-std = "3"
toml = "0.8"
test_helpers = { path = "../../test_helpers", version = "0.8.0" }

[features]
default = ["serde_json"]
serde_json = ["ortho_config/serde_json"]
json5 = ["ortho_config/json5"]
yaml = ["ortho_config/yaml"]
toml = ["ortho_config/toml"]
